# Networking-in-C

./: CMakeLists.txt  main.c  make.txt  networking
common/: endianness.c  endianness.h
helpers/: address_helper.c  address_helper.h  io_helper.h
include/common/: endianness.h  network_types.h
include/helpers/: address_helper.h
include/transfer/: binary_transfer.h  integer_transfer.h  str_transfer.h
libraries/android-ifaddrs/: ifaddrs.c  ifaddrs.h
networking.dSYM/Contents/Resources/DWARF/: networking
outputs/: Makefile  Networking.cbp  cmake_install.cmake
outputs/debug/lib/: libnetworking.dylib
outputs/lib/apple/: libnetworking.dylib
outputs/lib/unix/: libnetworking.dylib
src/: main.c
src/common/: endianness.c
src/helpers/: address_helper.c  io_helper.c
src/transfer/: binary_transfer.c  integer_transfer.c  str_transfer.c
test/: test_endianness.c  test_endianness.h
transfer/: binary_transfer.c  binary_transfer.h  integer_transfer.c  integer_transfer.h  str_transfer.c  str_transfer.h
